git flutter befor phase3
